Select Exercises Dialog

--- a/b-fit/app/globals.css
+++ b/b-fit/app/globals.css
@@ -34,3 +34,21 @@ body {
 html{
   scroll-behavior: smooth;
 }
+
+/* Custom Scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #2d3748; /* Gray background */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #4a5568; /* Darker gray */
+  border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #718096; /* Lighter gray on hover */
+}
