--- a/b-fit/app/globals.css
+++ b/b-fit/app/globals.css
@@ -18,12 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-weight: 400;
 }
 
 @layer utilities {
@@ -31,8 +26,23 @@ body {
     text-wrap: balance;
   }
 }
-html{
+
+html {
   scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #0f172a;
+}
+/* Setting Base H tags */
+h1,h2,h3,h4,h5,h6 {
+  font-weight: 700; /* Bold for headings */
+}
+p {
+  font-weight: 400; /* Regular weight for paragraphs */
+}
+
+strong {
+  font-weight: 500; /* Medium weight for emphasis */
 }
 
 /* Custom Scrollbar */
