--- a/b-fit/app/globals.css
+++ b/b-fit/app/globals.css
@@ -68,6 +68,14 @@ p {
 strong {
   font-weight: 500; /* Medium weight for emphasis */
 }
+/* No Scrollbar */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 
 /* Custom Scrollbar */
 .custom-scrollbar::-webkit-scrollbar {
