--- a/b-fit/app/globals.css
+++ b/b-fit/app/globals.css
@@ -77,7 +77,7 @@ strong {
   scrollbar-width: none; /* Firefox */
 }
 
-/* Custom Scrollbar */
+/* Custom Scrollbar Horizontal*/
 .custom-scrollbar::-webkit-scrollbar {
   width: 8px;
 }
@@ -92,6 +92,24 @@ strong {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #718096; /* Lighter gray on hover */
+}
+
+/* Custom Scrollbar vertical*/
+.custom-scrollbar-vertical::-webkit-scrollbar {
+  height: 8px;
+}
+
+.custom-scrollbar-vertical::-webkit-scrollbar-track {
+  background: #2d3748; /* Gray background */
+}
+
+.custom-scrollbar-vertical::-webkit-scrollbar-thumb {
+  background-color: #4a5568; /* Darker gray */
+  border-radius: 4px;
+}
+
+.custom-scrollbar-vertical::-webkit-scrollbar-thumb:hover {
   background-color: #718096; /* Lighter gray on hover */
 }
 tr {
