Fetch exercise history changed to api route - with commented out code

--- a/b-fit/app/globals.css
+++ b/b-fit/app/globals.css
@@ -286,3 +286,12 @@ tr {
     overflow-y: auto; /* Ensure scrolling */
   }
 }
+
+[data-sonner-toast] {
+  z-index: 99999 !important;
+  pointer-events: auto !important;
+}
+[data-sonner-toaster] {
+  z-index: 99999 !important;
+  pointer-events: auto !important;
+}
