--- a/b-fit/app/globals.css
+++ b/b-fit/app/globals.css
@@ -245,7 +245,7 @@ tr {
     height: auto;
   }
   .add-exercise-drawer {
-    height: 100vh;
+    height: 100dvh;
     width: 600px;
   }
 }
@@ -261,8 +261,8 @@ tr {
     max-height: 90vh;
   }
   .add-exercise-drawer {
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
   }
 }
 
@@ -277,8 +277,8 @@ tr {
     height: 100vh;
   }
   .add-exercise-drawer {
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
   }
 
   .custom-dialog .grid-container {
